Bug 1601286 - Remove supression for seemingly fixed issue. r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D95130