mozglue/build/TsanOptions.cpp
@@ -221,15 +221,6 @@ extern "C" const char* __tsan_default_suppressions() {
          // Bug 1506812
          "race:BeginBackgroundRead\n"
 
-         // Bug 1601286
-         "race:setFlagBit\n"
-         "race:isFatInline\n"
-         "race:AtomizeAndCopyCharsFromLookup\n"
-         "race:inlinedMarkAtomInternal\n"
-         "race:XDRInnerObject<js::XDR_DECODE>\n"
-         "race:ScriptStencil::finishGCThings\n"
-         "race:XDRScriptGCThing<js::XDR_DECODE>\n"
-
          // Bug 1619162
          "race:currentNameHasEscapes\n"
 
